testutil/src/snapshots/testutil__branch_management_unmanage.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-A is now unmanaged by GHerrit.
