testutil/src/snapshots/testutil__commit_msg_edge_manage.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch main is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will sync PRs only, but will not push main itself.
