testutil/src/snapshots/testutil__commit_msg_squash.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
(empty)
