testutil/src/snapshots/testutil__install_security_custom_external_allow.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] [WARN] Installing to external/global hooks path (allowed by --allow-global): "[EXTERNAL_HOOKS_PATH]"
[gherrit] Installed pre-push
[gherrit] Installed commit-msg
[gherrit] Installed post-checkout
