testutil/src/snapshots/testutil__install_security_custom_external_block.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] By default, GHerrit will not install to external/global hooks path: "[EXTERNAL_HOOKS_PATH]"
[gherrit] [ERROR] Use --allow-global to override.
