testutil/src/snapshots/testutil__manage_detached_head.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] Cannot get management state in detached HEAD
